Fixed overflow issue

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -24,9 +24,10 @@ body {
   background-size: cover;
   background-repeat: none;
   height: 100vh;
+  overflow: hidden;
 }
 main {
-  margin: 0;
+  margin-top: 0px;
 }
 
 .title {
